# news_reader

./: .gitignore  Cargo.toml  Dockerfile.windows  README.md  bbcnewsbleh.txt  bbcnewsbleh2.txt
src/: article.rs  lib.rs  main.rs
